2008-04-06  Ales Hakl  <ales at hakl dot net>

	* lib/threads.c: solaris fixes

2008-04-04  Ales Hakl  <ales at hakl dot net>

	* src/object.c: use DFSCH_TYPE_OF instead of direct acess to type
	field
	
	* Mass replace of DFSCH_TYPE_OF

2008-04-03  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (lookup_symbol): case-sensitive symbols
	Use DFSCH_TYPE_OF instead of direct access to type field

2008-03-31  Ales Hakl  <ales at hakl dot net>

	* scm/test.scm: There is no real need for this to use (require 'lib) 

2008-03-23  Ales Hakl  <ales at hakl dot net>

	* Makefile.am: add -avoid-version to modules

	* src/wrapper.c (define_wrapper_type): use dfsch_symbol_2_typename

2008-02-17  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_symbol_2_typename): centralized removal of
	brackets from typenames

2008-02-15  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_obj_write): insert space after typename

2008-02-12  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_obj_write): write object pointers correctly

	* src/object.c (abstract_class_type): abstract classes

2008-02-11  Ales Hakl  <ales at hakl dot net>

	* NEWS: release 0.2.0

2008-02-09  Ales Hakl  <ales at hakl dot net>

	* src/wrapper.c (DFSCH_DEFINE_FORM_IMPL): define-wrapper-type
	(wrapper_basetype): common superclass for wrapper types

	* dfsch/dfsch.h (DFSCH_KEYWORD): support for keyword arguments to
	C code.

2008-02-08  Ales Hakl  <ales at hakl dot net>

	* src/parse.c: Symbol aliases and parser directives (useful for
	many unrelated things, for example packages)

	* Makefile.am (nobase_include_HEADERS): install util.h

	* src/ports.c (dfsch_port_basetype): base class for ports (not
	used for anything, only for consistency)

2008-02-06  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c: Eliminated most warnings (and more or less
	redundant const declarations)

	* src/hash.c (dfsch__hash_native_register): support for custom
	hashes (with same API, usable even as environment entries)